# zatsu-book

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  TODO.md  book.toml  design.md
.github/workflows/: ci.yml  pages.yml  rust-release.yml
config/: taxonomy.yaml
docs/adr/: ADR-0001-source-health-check.md  ADR-0002-official-domain-allowlist.md  ADR-0003-related-facts-recommendation.md  ADR-0004-search-alias-and-tag-synonym.md  ADR-0005-template-and-top-page-refresh.md  README.md
facts/animals/: animal-0001.yaml  animal-0002.yaml  animal-0003.yaml  animal-0004.yaml  animal-0005.yaml  animal-0006.yaml  animal-0007.yaml  animal-0008.yaml  animal-0009.yaml  animal-001-01-a.yaml  animal-001-01-b.yaml  animal-001-02-a.yaml  animal-001-02-b.yaml  animal-001-03-a.yaml  animal-001-03-b.yaml  animal-001-04-a.yaml  animal-001-04-b.yaml  animal-001-05-a.yaml  animal-001-05-b.yaml  animal-001-06-a.yaml  animal-001-06-b.yaml  animal-001-07-a.yaml  (+1142 more)
schemas/: fact.schema.json
scripts/: check-generated.sh
src/: 404.md  README.md  SUMMARY.md
templates/: fact.yaml  page.md.hbs
theme/: index.hbs  searcher.js
tools/factctl/: Cargo.toml
tools/factctl/src/: cli.rs  dedupe.rs  doctor.rs  load.rs  main.rs  model.rs  new.rs  normalize.rs  render.rs  stale.rs  terms.rs  update.rs  validate.rs
tools/factctl/tests/fixtures/config/: taxonomy.yaml
tools/factctl/tests/fixtures/facts/invalid_filename/money/: not-the-fact-id.yaml
tools/factctl/tests/fixtures/facts/valid/money/: money-001-yen-tree-not-specific.yaml
xtask/: Cargo.toml
(+6627 files in other folders)
